--- a/CvBerkaySezer/Areas/Admin/Views/Home/Index.cshtml
+++ b/CvBerkaySezer/Areas/Admin/Views/Home/Index.cshtml
@@ -67,6 +67,30 @@
                     <a href="/Admin/Client" class="small-box-footer">Daha Fazla Bilgi <i class="fas fa-arrow-circle-right"></i></a>
                 </div>
             </div>
+            <div class="col-lg-3 col-6">
+                <div class="small-box bg-primary">
+                    <div class="inner">
+                        <h3>@ViewBag.Hosting</h3>
+                        <p>Aktif Hosting Hizmetleri</p>
+                    </div>
+                    <div class="icon">
+                        <i class="fa-solid fa-server"></i>
+                    </div>
+                    <a href="#" class="small-box-footer">Daha Fazla Bilgi <i class="fas fa-arrow-circle-right"></i></a>
+                </div>
+            </div>
+            <div class="col-lg-3 col-6">
+                <div class="small-box bg-primary">
+                    <div class="inner">
+                        <h3>@ViewBag.Domain</h3>
+                        <p>Aktif Alan Adları</p>
+                    </div>
+                    <div class="icon">
+                        <i class="fa-solid fa-globe"></i>
+                    </div>
+                    <a href="#" class="small-box-footer">Daha Fazla Bilgi <i class="fas fa-arrow-circle-right"></i></a>
+                </div>
+            </div>
         </div>
         <div class="row">
             <div class="col-lg-3 col-6">
